--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="((user$ | async) || 1) as user">
+<div *ngIf="(user$ | async) || 1 as user">
   <nav class="green">
     <div class="nav-wrapper container">
       <a [routerLink]="['/']" class="brand-logo">สารบรรณ สพจ.</a>
