--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,8 @@
   <h4 class="center">สโมสรนิสิตคณะแพทยศาสตร์ จุฬาลงกรณ์มหาวิทยาลัย</h4>
 </div>
 <div class="row center">
-  <a class="waves-effect waves-light btn-large orange" (click)="login()"><i class="material-icons"></i> เข้าสู่ระบบด้วย Docchula</a>
+  <a class="waves-effect waves-light btn-large orange" (click)="login()"
+    ><i class="material-icons"></i> เข้าสู่ระบบด้วย Docchula</a
+  >
 </div>
 <p class="center">ฝ่ายเทคโนโลยีสารสนเทศ สโมสรนิสิตคณะแพทยศาสตร์ จุฬาลงกรณ์มหาวิทยาลัย</p>
