--- a/src/app/main/new/new.component.html
+++ b/src/app/main/new/new.component.html
@@ -1,13 +1,11 @@
-<div *ngIf="category$ | async as category">
-  <div *ngIf="year$ | async as year">
-    <span *ngIf="category.name; then hasName; else noName"></span>
+    <span *ngIf="(category$ | async)?.name; then hasName; else noName"></span>
     <ng-template #hasName>
-      <h4>ออกหนังสือใหม่ ประเภท{{ category.name }} ปี พ.ศ. {{ year.buddhist_year }}</h4>
+      <h4>ออกหนังสือใหม่ ประเภท{{ (category$ | async)?.name }} ปี พ.ศ. {{ (year$ | async)?.buddhist_year }}</h4>
     </ng-template>
     <ng-template #noName>
-      <h4>ออกหนังสือใหม่ ปีพ.ศ. {{ year.buddhist_year }}</h4>
+      <h4>ออกหนังสือใหม่ ปีพ.ศ. {{ (year$ | async)?.buddhist_year }}</h4>
     </ng-template>
-    <div class="row" *ngIf="divisions">
+    <div class="row">
       <div class="col s12 m10 offset-m1">
         <ul class="collapsible">
           <li class="active">
@@ -35,8 +33,8 @@
                 <div class="row">
                   <div class="col s12">
                     <label>หน่วยงานที่ออกหนังสือ</label>
-                    <select formControlName="divisionId">
-                      <option *ngFor="let division of divisions" [value]="division.value">{{ division.name }}</option>
+                    <select formControlName="divisionId" #divisionSelect>
+                      <option *ngFor="let division of divisions$ | async" [value]="division.value">{{ division.name }}</option>
                     </select>
                   </div>
                 </div>
@@ -244,5 +242,3 @@
         </ul>
       </div>
     </div>
-  </div>
-</div>
