--- a/src/app/main/new/new.component.html
+++ b/src/app/main/new/new.component.html
@@ -7,7 +7,7 @@
 </ng-template>
 <div class="row">
   <div class="col s12 m10 offset-m1">
-    <ul class="collapsible">
+    <ul class="collapsible" #collapsible>
       <li class="active">
         <div class="collapsible-header">
           <i class="material-icons">add</i>ฉันร่างหนังสือไว้แล้ว ต้องการเพียงเลขที่หนังสือ
@@ -113,7 +113,7 @@
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input id="gTo" type="text" class="validate autocomplete" formControlName="to" required />
+                <input #gTo type="text" class="validate autocomplete" formControlName="to" required />
                 <label for="gTo">ถึง</label>
                 <span class="helper-text">โดยปกติคือตำแหน่งของหัวหน้าหน่วยงานที่ต้องการแจ้ง</span>
               </div>
