--- a/src/app/main/new/new.component.html
+++ b/src/app/main/new/new.component.html
@@ -33,8 +33,8 @@
             <div class="row">
               <div class="col s12">
                 <label>หน่วยงานที่ออกหนังสือ</label>
-                <select formControlName="divisionId" #divisionSelect>
-                  <option *ngFor="let division of divisions$ | async" [value]="division.value">{{
+                <select formControlName="division" #divisionSelect>
+                  <option *ngFor="let division of divisions$ | async" [value]="division">{{
                     division.name
                   }}</option>
                 </select>
