feat: add DOMPurify

--- a/src/app/main/list/list.component.html
+++ b/src/app/main/list/list.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="announcement$ | async as announcement" class="announcement yellow lighten-4">
-  <div [innerHTML]="announcement"></div>
+  <div [innerHTML]="announcement | dompurify"></div>
 </div>
 <button
   type="button"
